--- a/web/templates/post/form.html.eex
+++ b/web/templates/post/form.html.eex
@@ -58,7 +58,7 @@
     <div class="input-field col s12 m12">
       <i class="material-icons prefix" style="color:black;"">mode_edit</i>
       <label style="font-size:20px;" for="body">
-        <p>Content</p>
+        Content
       </label>
       <br/><br/>
       <%= textarea f, :body, class: "form-control", id: "body", rows: "10"%>
