--- a/web/templates/channel/channel_post.html.eex
+++ b/web/templates/channel/channel_post.html.eex
@@ -30,22 +30,14 @@
         <div class="input-field col s12 m12">
           <i class="material-icons prefix" style="color:black;"">mode_edit</i>
           <label style="font-size:20px;" for="body">
-            <p>Content</p>
+            Content
           </label>
-          <br/><br/>
-          <textarea name="body" id="summernote" rows="10"/></textarea>
-        </div>
+            <textarea name="body" id="body" rows="10"/></textarea>
+          </div>
 
-        <script>
-          $(document).ready(function() {
-             $('#summernote').summernote({
-             height: 300,                 // set editor height
-            minHeight: null,             // set minimum height of editor
-            maxHeight: null,             // set maximum height of editor
-            focus: true
-            });
-          });
-        </script>
+          <script>
+              CKEDITOR.replace( 'body' );
+          </script>
 
         <div class="input-field col s12 m6">
           <i class="material-icons prefix">mode_edit</i>
