--- a/web/templates/post/index.html.eex
+++ b/web/templates/post/index.html.eex
@@ -1,56 +1,57 @@
+<div class="container">
+  <h4 style="text-align:center; "><i>Posts Feed</i></h4>
+  <div class="card-panel white" style="border-radius:5px;">
+  <div class="row">
+  <%= render "filters.html", posts: @posts,
+                              action: post_path(@conn, :index, @posts) %>
+                          <br/>
 
-<h4 style="text-align:center; "><i>Posts Feed</i></h4>
-<div class="card-panel white" style="border-radius:5px;">
-<div class="row">
-<%= render "filters.html", posts: @posts,
-                            action: post_path(@conn, :index, @posts) %>
-                        <br/>
+  <!--<table class="table">
+    <thead>
+      <tr>
+        <th>Title</th>
+        <th>Body</th>
 
-<!--<table class="table">
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Body</th>
+        <th></th>
+      </tr>
+    </thead>
+  </table>-->
 
-      <th></th>
-    </tr>
-  </thead>
-</table>-->
-
-<hr/>
-<div class="row">
-  <div class="col s12">
-    <%= link "Create A New Post", to: post_path(@conn, :new), class: "btn blue-grey darken-2", style: "position: right;" %>
+  <hr/>
+  <div class="row">
+    <div class="col s12">
+      <%= link "Create A New Post", to: post_path(@conn, :new), class: "btn blue-grey darken-2", style: "position: right;" %>
+    </div>
+    <div class="col s12">
+      <%= paginate @conn, @kerosene, theme: :foundation %>
+    </div>
   </div>
-  <div class="col s12">
-    <%= paginate @conn, @kerosene, theme: :foundation %>
+  <%= for post <- @posts do %>
+  <div class="row hoverable card-panel light-blue A100" style="border-radius:5px;">
+      <div class="col s12 m3">
+        <h5><%= post.title %></h5>
+      </div>
+      <div class="col s12 m5">
+        <p style="padding-top:15px;" class="truncate"><%= HtmlSanitizeEx.strip_tags(post.body) %></p>
+      </div>
+      <div class="show-on-small col s12 m4">
+        <div class="col s12 m12 l4" style="position: in-line; height: 50px; width:115px;" >
+            <%= link "Show", to: post_path(@conn, :show, post), class: "btn btn-default btn-xs green accent-4" %>
+        </diV>
+        <div class="col s12 m12 l4" style="position: in-line; height: 50px; width:110px;" >
+            <%= link "Edit", to: post_path(@conn, :edit, post), class: "btn btn-default btn-xs pink A400" %>
+        </div>
+        <div class="col s12 m12 l4" style="position: in-line; height: 50px; width:100px;" >
+            <%= link "Delete", to: post_path(@conn, :delete, post), method: :delete, data: [confirm: "Are you sure?"], class: "red btn btn-danger btn-xs" %>
+        </div>
+      </div>
+
+
+      <!--<div class="col s12 m2">
+        <span><%= link "Delete", to: post_path(@conn, :delete, post), method: :delete, data: [confirm: "Are you sure?"], class: "red btn btn-danger btn-xs" %></span>
+      </div>-->
   </div>
-</div>
-<%= for post <- @posts do %>
-<div class="row hoverable card-panel light-blue A100" style="border-radius:5px;">
-    <div class="col s12 m3">
-      <h5><%= post.title %></h5>
-    </div>
-    <div class="col s12 m5">
-      <p style="padding-top:15px;" class="truncate"><%= HtmlSanitizeEx.strip_tags(post.body) %></p>
-    </div>
-    <div class="show-on-small col s12 m4">
-      <div class="col s12 m12 l4" style="position: in-line; height: 50px; width:115px;" >
-          <%= link "Show", to: post_path(@conn, :show, post), class: "btn btn-default btn-xs green accent-4" %>
-      </diV>
-      <div class="col s12 m12 l4" style="position: in-line; height: 50px; width:110px;" >
-          <%= link "Edit", to: post_path(@conn, :edit, post), class: "btn btn-default btn-xs pink A400" %>
-      </div>
-      <div class="col s12 m12 l4" style="position: in-line; height: 50px; width:100px;" >
-          <%= link "Delete", to: post_path(@conn, :delete, post), method: :delete, data: [confirm: "Are you sure?"], class: "red btn btn-danger btn-xs" %>
-      </div>
-    </div>
-
-
-    <!--<div class="col s12 m2">
-      <span><%= link "Delete", to: post_path(@conn, :delete, post), method: :delete, data: [confirm: "Are you sure?"], class: "red btn btn-danger btn-xs" %></span>
-    </div>-->
-</div>
-<% end %>
-<%= paginate @conn, @kerosene, theme: :foundation %>
+  <% end %>
+  <%= paginate @conn, @kerosene, theme: :foundation %>
+  </div>
 </div>
