posts page form change

--- a/web/templates/post/new.html.eex
+++ b/web/templates/post/new.html.eex
@@ -1,4 +1,4 @@
-<div class="z-depth-4 white card-panel" style="padding:20px; border-radius:10px;">
+<div class="z-depth-4 white card-panel">
   <div style="padding:10px;">
 
       <h2>New post</h2>
