--- a/web/templates/post/form.html.eex
+++ b/web/templates/post/form.html.eex
@@ -37,9 +37,17 @@
       <%= text_input f, :author, class: "form-control", id: "author" %>
       <label style="font-size:20px;" for="author">Author</label>
       <br/>
+      <br/>
     </div>
 
-<!--    <div class="input-field col s12">
+    <div class="input-field col s12 m6">
+      <i class="material-icons prefix">mode_edit</i>
+      <%= text_input f, :tags, class: "form-control", id: "tags",  placeholder: "Place a comma between each tag like this: tag1,tag2" %>
+      <label style="font-size:20px;" for="tags">Tags</label>
+      <br/>
+    </div>
+
+    <div class="input-field col s12 m6">
     <select>
       <option value="" disabled selected>Choose your option</option>
       <option value="1">Option 1</option>
@@ -47,7 +55,7 @@
       <option value="3">Option 3</option>
     </select>
     <label>Materialize Select</label>
-  </div> -->
+  </div>
 
   <script>
   $(document).ready(function() {
@@ -79,17 +87,12 @@
     </script>-->
     <br/>
 
-    <div class="input-field col s12 m6">
-      <i class="material-icons prefix">mode_edit</i>
-      <%= text_input f, :tags, class: "form-control", id: "tags",  placeholder: "Place a comma between each tag like this: tag1,tag2" %>
-      <label style="font-size:20px;" for="tags">Tags</label>
-      <br/>
-      <br/>
-    </div>
 
-    <div class="input-field col s12 m3 push s3"
+
+    <div class="input-field col s6"
       <span>
         	<%= submit "Submit", class: "submit btn btn-primary waves-effect waves-light cyan" %>
+          <span><%= link "Back", to: post_path(@conn, :index), class: "btn pink A400"%></span>
       </span>
     </div>
   </div>
