--- a/web/templates/post/index.html.eex
+++ b/web/templates/post/index.html.eex
@@ -57,15 +57,13 @@
 </div>
 
 
-<div class="modal fade" id="newpost" style="padding:20px; border-radius:10px;">
+<div class="modal fade" id="newpost" style="padding:20px;">
   <div style="padding:10px;">
 
   <!--  <h2>New post</h2> -->
 
-    <%= render "form.html", changeset: @changeset,
+    <%= render "form.html", changeset: @changeset, conn: @conn,
                             action: post_path(@conn, :create) %>
-
-    <span><%= link "Back", to: post_path(@conn, :index), class: "btn pink A400"%></span>
 
   </div>
 
