--- a/web/templates/channel/viewlist.html.eex
+++ b/web/templates/channel/viewlist.html.eex
@@ -1,116 +1,130 @@
-<div class="container">
-  <div class="col s12">
-    <h4 class="center-align">Channels</h4>
-    <form method="GET" action="/channels/search">
-      <div class="row">
-        <div class="input-field col s10">
-          <i class="material-icons prefix">search</i>
-          <input type="search" name="name" placeholder="Search">
-        </div>
-      </div>
-    </form>
-    <div class="container">
-<!------- MODAL TEST -->
+<br>
+<h4 class="container center">Channels</h4>
+<br>
+<div class="card" style="margin: 0 auto;">
+  <div class="col s10 l6 ">
 
+    <div class="container  " >
 
-<!-- Modal Trigger -->
+      <script>
+      $(document).ready(function(){
+          // the "href" attribute of the modal trigger must specify the modal ID that wants to be triggered
+          $('.modal').modal();
+        });
 
+      </script>
 
-<script>
-$(document).ready(function(){
-    // the "href" attribute of the modal trigger must specify the modal ID that wants to be triggered
-    $('.modal').modal();
-  });
+    <!------ MODAL TEST END -->
+          <!-- Trigger the modal with a button -->
 
-</script>
+          <!-- Modal -->
+          <div class="modal fade " id="modal1" role="dialog">
+            <div class="modal-dialog">
 
-
-<!------ MODAL TEST END -->
-      <!-- Trigger the modal with a button -->
-
-      <!-- Modal -->
-      <div class="modal fade" id="modal1" role="dialog">
-        <div class="modal-dialog">
-
-          <!-- Modal content-->
-          <div class="modal-content">
-            <div class="modal-header">
-              <h4 class="modal-title">Create Channel</h4>
-            </div>
-            <div class="modal-body">
-
-              <form class="form" method="POST" action="/channels/create">
-
-                <div class="content">
-
-                  <div class="row">
-                 <div class="input-field col s6">
-                 <i class="material-icons  prefix">title</i>
-                   <input  id="name" name="name" type="text" class="validate" placeholder="Channel Name">
-                   <label for="name">Name</label>
-                 </div>
-
-              <div class="input-field col s6">
-                <i class="material-icons  prefix">lock</i>
-                <select>
-                  <option value="private">Private</option>
-                  <option value="public">Public</option>
-                </select>
-
-                  <label for="sel1">Privacy Type</label>
-              </div>
-            </div>
-                      <div class="input-field col s12">
-                        <textarea id="summary" name="summary" class="materialize-textarea"></textarea>
-                        <label for="summary">Summary</label>
-                      </div>
+              <!-- Modal content-->
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h4 class="modal-title">Create Channel</h4>
                 </div>
-                <input type="hidden" name="_csrf_token" value="<%= get_csrf_token() %>">
+                <div class="modal-body">
 
-                <div class="modal-footer">
-                  <button class="btn-large waves-effect waves-light btn btn-simple btn-primary btn-lg" type="submit" name="submit">
-                    CREATE YOUR Channel &rarr;
-                  </button>    </div>
+                  <form class="form" method="POST" action="/channels/create">
+
+                    <div class="content">
+
+                      <div class="row">
+                     <div class="input-field col s6">
+                     <i class="material-icons  prefix">title</i>
+                       <input  id="name" name="name" type="text" class="validate" placeholder="Channel Name">
+                       <label for="name">Name</label>
+                     </div>
+
+                  <div class="input-field col s6">
+                    <i class="material-icons  prefix">lock</i>
+                    <select>
+                      <option value="private">Private</option>
+                      <option value="public">Public</option>
+                    </select>
+
+                      <label for="sel1">Privacy Type</label>
+                  </div>
+                </div>
+                          <div class="input-field col s12">
+                            <textarea id="summary" name="summary" class="materialize-textarea"></textarea>
+                            <label for="summary">Summary</label>
+                          </div>
+                    </div>
+                    <input type="hidden" name="_csrf_token" value="<%= get_csrf_token() %>">
+
+                    <div class="modal-footer">
+                      <button class="btn-large waves-effect waves-light btn btn-simple btn-primary btn-lg" type="submit" name="submit">
+                        CREATE YOUR Channel &rarr;
+                      </button>    </div>
+                    </div>
+
+                </div>
+
+              </form>
                 </div>
 
             </div>
-
-          </form>
-            </div>
+          </div>
 
         </div>
-      </div>
+        <!-- collection of customers -->
 
-    </div>
-    <!-- collection of customers -->
-  <%= for channel <- @channels do %>
-    <ul class="collection">
-      <li class="collection-item avatar">
-        <div style=" background-color:red;" alt="" class="circle"> </div>
-          <%= if  Blog.Repo.get_by(Blog.UserChannel, channel_id: channel.id , user_id: @user.id) do %>
-          <span class="title"><a href="/channels/<%= channel.id%>"><%= channel.name%></a>
-
-          <a class="btn-flat disabled"><i class="material-icons">check</i></a>
-          <%= else %>
-          <span class="title"><a><%= channel.name%></a>
-
-          <a class="btn-flat" href="/channels/join/<%= channel.id%>">Join</a>
-
-          <%end%>
-        </span>
-         <p>
-
-          Created: <%= Timex.from_now(NaiveDateTime.to_erl(channel.inserted_at)) %>
-
-         </p>
+        <div class="container  " >
+          <div class="row">
+            <div  class="input-field col  l8 ">
+              <form method="GET" action="/channels/search">
 
 
-          <p> Members: 10 </p>
-         <p> <%=channel.summary%></p>
-        <a href="/channels/<%= channel.id%>" class="secondary-content"><i class="material-icons">chevron_right</i></a>
-      </li>
-    </ul>
-  <% end %>
+
+                    <i class="material-icons prefix">search</i>
+                    <input type="search" name="name" placeholder="Search">
+                
+
+
+              </form>
+           </div>
+            <div class="input-field col l4">
+              <select name="sort">
+                <option value="" disabled selected>Sort </option>
+                <option value="desc">Newest First</option>
+                <option value="asc">Oldest First</option>
+              </select>
+            </div>
+          </div>
+      <%= for channel <- @channels do %>
+        <ul class="collection">
+          <li class="collection-item avatar">
+            <div style=" background-color:red;" alt="" class="circle"> </div>
+              <%= if  Blog.Repo.get_by(Blog.UserChannel, channel_id: channel.id , user_id: @user.id) do %>
+              <span class="title"><a href="/channels/<%= channel.id%>"><%= channel.name%></a>
+
+              <a class="btn-flat disabled"><i class="material-icons">check</i></a>
+              <%= else %>
+              <span class="title"><a><%= channel.name%></a>
+
+              <a class="btn-flat" href="/channels/join/<%= channel.id%>">Join</a>
+
+              <%end%>
+            </span>
+             <p>
+
+              Created: <%= Timex.from_now(NaiveDateTime.to_erl(channel.inserted_at)) %>
+
+             </p>
+
+
+              <p> Members: 10 </p>
+             <p> <%=channel.summary%></p>
+            <a href="/channels/<%= channel.id%>" class="secondary-content"><i class="material-icons">chevron_right</i></a>
+          </li>
+        </ul>
+      <% end %>
+    </div >
+
   </div>
 </div>
 
