--- a/web/templates/layout/app.html.eex
+++ b/web/templates/layout/app.html.eex
@@ -14,16 +14,13 @@
 
       <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
 <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.25.0/codemirror.min.css">
-
 <!-- Include Editor style.
 <link href="https://cdnjs.cloudflare.com/ajax/libs/froala-editor/2.6.5/css/froala_editor.pkgd.min.css" rel="stylesheet" type="text/css" />
 <link href="https://cdnjs.cloudflare.com/ajax/libs/froala-editor/2.6.5/css/froala_style.min.css" rel="stylesheet" type="text/css" />
-
 <!-- Include external JS libs. --
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.25.0/codemirror.min.js"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.25.0/mode/xml/xml.min.js"></script>
-
 <!-- Include Editor JS files. --
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/froala-editor/2.6.5/js/froala_editor.pkgd.min.js"></script>
 -->
@@ -35,18 +32,13 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.1/js/materialize.min.js"></script>
 
   <!--  <link href="https://netdna.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.css" rel="stylesheet">
-
         <!-- Compiled and minified CSS -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.1/css/materialize.min.css">
 <!--
     <script src="https://netdna.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.js"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.7/summernote.css" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.7/summernote.js"></script>
-
     <link href="https://cdn.quilljs.com/1.3.1/quill.snow.css" rel="stylesheet">--
-
-
-
     <!-- Include the Quill library --
     <script src="https://cdn.quilljs.com/1.3.1/quill.js"></script>-->
 
@@ -58,7 +50,6 @@ $(document).ready(function(){
 $(document).ready(function() {
 $('select').material_select();
 });
-
 </script>
 <link rel="stylesheet" type="text/css" href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
 
@@ -69,28 +60,22 @@ $('select').material_select();
       padding-right: 30px;
       padding-left: 30px;
     }
-
         .fancy-checkbox input[type="checkbox"],
     .fancy-checkbox .checked {
         display: none;
     }
-
     .fancy-checkbox input[type="checkbox"]:checked ~ .unchecked
     {
         display: inline-block;
     }
-
     .fancy-checkbox input[type="checkbox"]:checked ~ .checked
     {
         display: none;
     }
-
     .fancy-checkbox {
         font-size: 1.5em;
         color: #489fdf;
     }
-
-
     .notification-badge {
     position: relative;
     right: 5px;
@@ -101,11 +86,9 @@ $('select').material_select();
     border-radius: 50%;
     padding: 4px 5px;
 }
-
 small {
     font-size: 15px;
 }
-
     </style>
   </head>
 
@@ -129,14 +112,19 @@ small {
               <li class"active cyan" ><a href="/posts">Posts</a></li>
 
               <li class"active cyan" ><a href="/posts">More</a></li>
+			    <li>
+               <a class='dropdown-button bz' href='#' data-activates='notifications-dropdown'><i class="material-icons " >notifications </i></a>
+
+                        <ul id="notifications-dropdown" class="dropdown-content dc active" data-constrainwidth="false" >
+
+
+                    </ul>
+              </li>
 
               <li class"active cyan" ><a href="/login">Logout</a></li>
         <!--      <li>
                <a class='notif-button bz' href='#' data-activates='notifications-cont'><i class="material-icons " >notifications </i></a>
-
                         <ul id="notifications-cont" class="notif-content active" data-constrainwidth="false" >
-
-
                     </ul>
               </li>-->
               <li>              <i class="material-icons">search</i>
@@ -183,13 +171,32 @@ small {
         <% end %>
         <%= render @view_module, @view_template, assigns %>
       </main>
+
     </div>
     </div> <!-- /container -->
+
+          <footer class="page-footer teal z-depth-4" >
+                    <div class="container">
+                      <div class="row">
+                        <div class="col l6 s12">
+                          <h5 class="white-text">Material Profile</h5>
+                          <p class="grey-text text-lighten-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum, voluptate.</p>
+                        </div>
+                        <div class="col l4 offset-l2 s12">
+                        </div>
+                      </div>
+                    </div>
+                    <div class="footer-copyright">
+                      <div class="container">
+                      &copy; 2015 Copyright
+                      <a class="grey-text text-lighten-4 right" href="#!">Terms</a>
+                      </div>
+                    </div>
+                  </footer>
     <script src="<%= static_path(@conn, "/js/app.js") %>"></script>
 
     <script>
     $(document).ready(function(){
-
           function load_unseen_notification(view = '')
           {
             $.ajax({
@@ -199,30 +206,22 @@ small {
              dataType:"json",
              success:function(data)
              {
-
               $('.notif-content').html(data.notification);
               if(data.unseen_notification > 0)
               {
-
                 $('.bz').html('<i class="material-icons " >notifications <small class="notification-badge">5</small>  </i>');
                 notify();
               }
              }
             });
           }
-
           load_unseen_notification();
-
-
           $(document).on('click', '.bz', function(){
             $('.bz').html('<i class="material-icons " >notifications  </i>');
             });
-
           setInterval(function(){
               load_unseen_notification();
             }, 1000000);
-
-
             function notify(view = '')
             {
               if(window.Notification && Notification.permission !== "denied") {
@@ -233,12 +232,8 @@ small {
               		});
               	});
               }
-
             }
-
           });
-
-
     </script>
 
   </body>
