--- a/web/templates/post/index.html.eex
+++ b/web/templates/post/index.html.eex
@@ -1,5 +1,5 @@
 <div class="">
-  <h4 style="text-align:center; "><i>Posts Feed</i></h4>
+  <h4 style="text-align:center; ">Post's Feed</h4>
   <div class="card-panel white" style="border-radius:5px;">
   <div class="row">
   <%= render "filters.html", posts: @posts,
@@ -20,14 +20,12 @@
   <hr/>
   <div class="row">
     <div class="col s12">
-      <%= link "Create A New Post", to: "#newpost", class: "btn blue-grey darken-2 modal-trigger", style: "position: right;" %>
+      <%= link "Create A New Post", to: "#newpost", class: "btn blue-grey darken-2 modal-trigger right", style: "position: right;" %>
     </div>
-    <div class="col s12">
-      <%= paginate @conn, @kerosene, theme: :foundation %>
-    </div>
+  
   </div>
   <%= for post <- @posts do %>
-  <div class="row hoverable card-panel light-blue A100" >
+  <div class="row hoverable card-panel A100" >
       <div class="col s12 m3">
         <h5><%= post.title %></h5>
       </div>
@@ -35,10 +33,10 @@
         <p style="padding-top:15px;" class="truncate"><%= HtmlSanitizeEx.strip_tags(post.body) %></p>
       </div>
       <div class="show-on-small col s12 m4">
-        <div class="col s12 m12 l4" style="position: in-line; height: 50px; width:115px;" >
+        <div class="col s12 m12 l2" style="position: in-line; height: 50px; width:115px;" >
             <%= link "Show", to: post_path(@conn, :show, post), class: "btn btn-default btn-xs green accent-4" %>
         </diV>
-        <div class="col s12 m12 l4" style="position: in-line; height: 50px; width:110px;" >
+        <div class="col s12 m12 l2" style="position: in-line; height: 50px; width:110px;" >
             <%= link "Edit", to: post_path(@conn, :edit, post), class: "btn btn-default btn-xs pink A400" %>
         </div>
         <div class="col s12 m12 l4" style="position: in-line; height: 50px; width:100px;" >
