--- a/web/templates/user/profile.html.eex
+++ b/web/templates/user/profile.html.eex
@@ -1,11 +1,23 @@
-<div   style="background-color: white;">
-<div class="details center" >
+<div  class ="card card-signup" style="background-color: white;">
+
+<div class="details center" style="background-image: url('http://materialdesignthemes.com/demo/mdlwp/wp-content/uploads/sites/4/2015/07/landscape-grassland.jpg'); ">
+<!--  <img src="http://materialdesignthemes.com/demo/mdlwp/wp-content/uploads/sites/4/2015/07/landscape-grassland.jpg" alt="Smiley face"> -->
+
+<br>
   <figure class="card-profile-image">
-                    <img src="https://cdn1.iconfinder.com/data/icons/freeline/32/account_friend_human_man_member_person_profile_user_users-128.png" alt="profile image" class="circle z-depth-2 responsive-img activator">
+    <img src="https://cdn1.iconfinder.com/data/icons/freeline/32/account_friend_human_man_member_person_profile_user_users-128.png" alt="profile image" class="circle z-depth-2 responsive-img activator">
 </figure>
   <h5><%=@user.name%></h5>
-  <p>Actor / Environmentalist</p>
-  <p> Followers: 20 million</p>
+
+  <p >
+
+ Followers: 0
+ </p>
+ <a class="btn-floating right btn-small"><i class="material-icons">message</i></a>
+ <a class="btn-floating right btn-small"><i class="material-icons">thumb_up</i></a>
+
+</br>
+
 </div>
 <main >
 	<div class="jumbo"></div>
@@ -17,7 +29,8 @@
 			</div>
 			<div >
         <%= if is_nil(@user.bio) do %>
-         Edit your profile by clicking on the edit button below
+        <a href="/users/profile/edit/<%=@user.zid%>">Add Bio</a>
+
         <%= else %>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro officiis fugit hic vel voluptates perferendis aut quibusdam sit omnis unde aspernatur quae repellat blanditiis autem, a libero asperiores neque illum aliquid est tempore. Eveniet velit voluptate amet facere, repellendus aperiam, cumque est ipsam. Asperiores expedita iusto, inventore sit suscipit nihil repudiandae? Laboriosam cum maxime dolorem neque, in veniam expedita ad. Hic fugit necessitatibus blanditiis, optio dignissimos molestiae nam, numquam odio.</p>
         <% end%>
@@ -30,19 +43,52 @@
                     <li class="collection-item">
                       <div class="row">
                         <div class="col s5 grey-text darken-1"><i class="mdi-social-poll"></i> Work</div>
-                        <div class="col s7 grey-text text-darken-4 right-align">HTML, CSS</div>
+                        <div class="col s7 grey-text text-darken-4 right-align">  <%= if is_nil(@user.bio) do %>
+                          <a href="/users/profile/edit/<%=@user.zid%>">Add where you work</a>
+
+                          <% else %>
+                          Manhantan CO.
+                          <%end%>
+                        </div>
                       </div>
                     </li>
                     <li class="collection-item">
                       <div class="row">
                         <div class="col s5 grey-text darken-1"><i class="mdi-social-domain"></i> Lives in</div>
-                        <div class="col s7 grey-text text-darken-4 right-align">NY, USA</div>
+                        <div class="col s7 grey-text text-darken-4 right-align">
+                          <%= if is_nil(@user.bio) do %>
+                            <a href="/users/profile/edit/<%=@user.zid%>">Add where you live</a>
+
+                            <% else %>
+                            Manhantan CO.
+                            <%end%>
+
+                        </div>
+                      </div>
+                    </li>
+                    <li class="collection-item">
+                      <div class="row">
+                        <div class="col s5 grey-text darken-1"><i class="mdi-social-domain"></i> Hobbies</div>
+                        <div class="col s7 grey-text text-darken-4 right-align">
+                          <%= if is_nil(@user.details) do %>
+                            <a href="/users/profile/edit/<%=@user.zid%>">Add your hobbies</a>
+
+                            <% else %>
+
+                            <%end%>
+
+                        </div>
                       </div>
                     </li>
                     <li class="collection-item">
                       <div class="row">
                         <div class="col s5 grey-text darken-1"><i class="mdi-social-cake"></i> Birth date</div>
-                        <div class="col s7 grey-text text-darken-4 right-align">18th June, 1991</div>
+                        <div class="col s7 grey-text text-darken-4 right-align"><%= if is_nil(@user.bio) do %>
+                          <a href="/users/profile/edit/<%=@user.zid%>">Add where you birthday</a>
+
+                          <% else %>
+                          Aug 20, 2012
+                          <%end%></div>
                       </div>
                     </li>
                   </ul>
@@ -56,8 +102,9 @@
   <div class = "row">
     <div class="col s12">
       <p style="font-size: 19px;">Channels
+        <a class='right' href="/channels/view"><i class="material-icons " >remove_red_eye</i></a>
+        <a class='right' href="/channels/view"><i class="material-icons " >add</i></a>
 
-        <a href = "/channels/view" class="waves-effect waves-light btn right" style="font-size: 12px; width: 15%;" >View All</a>
       </p>
 
     </div>
@@ -98,22 +145,24 @@
     		</div>
     		<div id="test1" class="col s12">All</div>
     		<div id="test2" class="col s12">
-				<div class="row">
-					<div class="col s12 m6">
-						<img class="materialboxed responsive-img" src="http://materializecss.com/images/sample-1.jpg">
-					</div>
-					<div class="col s12 m6">
-						<img class="materialboxed responsive-img" src="http://materializecss.com/images/sample-1.jpg">
-					</div>
-				</div>
-				<div class="row">
-					<div class="col s12 m6">
-						<img class="materialboxed responsive-img" src="http://materializecss.com/images/sample-1.jpg">
-					</div>
-					<div class="col s12 m6">
-						<img class="materialboxed responsive-img" src="http://materializecss.com/images/sample-1.jpg">
-					</div>
-				</div>
+        <div>
+  				<div class="row">
+  					<div class="col s12 m6">
+  						<img class="materialboxed responsive-img" src="http://materializecss.com/images/sample-1.jpg">
+  					</div>
+  					<div class="col s12 m6">
+  						<img class="materialboxed responsive-img" src="http://materializecss.com/images/sample-1.jpg">
+  					</div>
+  				</div>
+  				<div class="row">
+  					<div class="col s12 m6">
+  						<img class="materialboxed responsive-img" src="http://materializecss.com/images/sample-1.jpg">
+  					</div>
+  					<div class="col s12 m6">
+  						<img class="materialboxed responsive-img" src="http://materializecss.com/images/sample-1.jpg">
+  					</div>
+  				</div>
+        </div>
 			</div>
     		<div id="test3" class="col s12">
 				<div class="row">
@@ -219,6 +268,12 @@
 			</div>
   		</div>
 	</div>
+  <div class="fixed-action-btn fab" style="bottom: 45px; right: 24px;">
+
+    <a class="btn-floating btn-large blue" href="/users/profile/edit/<%=@user.zid%>"><i class="material-icons">edit</i></a>
+
+    </div>
+  <!---
 	<div class="fixed-action-btn fab" style="bottom: 45px; right: 24px;">
     	<a class="btn-floating btn-large red">
       		<i class="large material-icons">arrow_drop_up</i>
@@ -226,31 +281,14 @@
     	<ul>
       		<li><a class="btn-floating orange"><i class="material-icons">thumb_up</i></a></li>
 			<li><a class="btn-floating green"><i class="material-icons">star</i></a></li>
-			<li><a class="btn-floating blue"><i class="material-icons">add</i></a></li>
+			<li><a class="btn-floating blue" href="/users/profile/edit/<%=@user.zid%>"><i class="material-icons">add</i></a></li>
 		</ul>
   	</div>
 
-
+-->
 </main>
 
-<footer class="page-footer blue">
-          <div class="container">
-            <div class="row">
-              <div class="col l6 s12">
-                <h5 class="white-text">Material Profile</h5>
-                <p class="grey-text text-lighten-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum, voluptate.</p>
-              </div>
-              <div class="col l4 offset-l2 s12">
-              </div>
-            </div>
-          </div>
-          <div class="footer-copyright">
-            <div class="container">
-            &copy; 2015 Copyright
-            <a class="grey-text text-lighten-4 right" href="#!">Terms</a>
-            </div>
-          </div>
-        </footer>
+
 </div>
 <div>
 <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
