--- a/web/templates/post/form.html.eex
+++ b/web/templates/post/form.html.eex
@@ -64,7 +64,7 @@
   </script>
 
     <div class="input-field col s12 m12">
-      <i class="material-icons prefix" style="color:black;"">mode_edit</i>
+      <i class="material-icons prefix" style="color:black;">mode_edit</i>
       <label style="font-size:20px;" for="body">
         Content
       </label>
@@ -89,10 +89,9 @@
 
 
 
-    <div class="input-field col s6"
+    <div class="input-field col s6">
       <span>
         	<%= submit "Submit", class: "submit btn btn-primary waves-effect waves-light cyan" %>
-          <span><%= link "Back", to: post_path(@conn, :index), class: "btn pink A400"%></span>
       </span>
     </div>
   </div>
