--- a/web/templates/auth/login.html.eex
+++ b/web/templates/auth/login.html.eex
@@ -7,47 +7,47 @@ login
 <div class="container">
   <div class="row">
 
-      <div class="card card-signup">
-    <form class="col s12"  method="POST">
-      <br/>
-      <h4 class="center-align">Welcome to Blogify.</h4>
-      <p class="center-align">
-        LOGIN NOW
-      </p>
-      <br/>
-      <div class="row">
-        <div class="input-field col s12">
-          <input id="email" type="email" name="email" class="validate" autofocus="true">
-          <label for="email">EMAIL</label>
+    <div class="card card-signup p-3">
+      <form class="col s12"  method="POST">
+        <br/>
+        <h4 class="center-align">Welcome to Blogify.</h4>
+        <p class="center-align">
+          LOGIN NOW
+        </p>
+        <br/>
+        <div class="row">
+          <div class="input-field col s12">
+            <input id="email" type="email" name="email" class="validate" autofocus="true">
+            <label for="email">EMAIL</label>
+          </div>
         </div>
-      </div>
-      <div class="row">
-        <div class="input-field col s12">
-          <input id="password" type="password" name=password class="validate">
-          <label for="password">PASSWORD</label>
+        <div class="row">
+          <div class="input-field col s12">
+            <input id="password" type="password" name=password class="validate">
+            <label for="password">PASSWORD</label>
+          </div>
         </div>
-      </div>
-      <div class="row">
-        <div class="col s12 center-align">
-          <button class="btn-large waves-effect waves-light" type="submit" name="action">
-            LOG IN
-          </button>
+        <div class="row">
+          <div class="col s12 center-align">
+            <button class="btn-large waves-effect waves-light" type="submit" name="action">
+              LOG IN
+            </button>
+          </div>
         </div>
-      </div>
-      <br/> <br/>
-      <div class="row">
-        <div class="col s12 center-align">
-          <a href="/reset-password">Forgot password?</a>
+        <br/> <br/>
+        <div class="row">
+          <div class="col s12 center-align">
+            <a href="/reset-password">Forgot password?</a>
+          </div>
         </div>
-      </div>
 
-      <div class="row">
-        <div class="col s12 center-align">
-          <a href="/signup">Register Now!</a>
+        <div class="row">
+          <div class="col s12 center-align">
+            <a href="/signup">Register Now!</a>
+          </div>
         </div>
-      </div>
 
-    </form>
+      </form>
   </div>
 </div>
 </div>
