--- a/web/templates/channel/channel.html.eex
+++ b/web/templates/channel/channel.html.eex
@@ -25,7 +25,7 @@
           <div class="post-wrap">
             <header>
               <h1 class="post-title" itemprop="title">
-                <a href="https://www.jepozz.work/graduate-ux-designer" rel="bookmark" title="Permalink: Graduate UX Designer" class="jobpost-trigger"><%= post.title%></a>
+                <a href="/posts/<%= post.id %>" rel="bookmark" title="Permalink: Graduate UX Designer" class="jobpost-trigger"><%= post.title%></a>
               </h1>
             </header>
             <!-- post content -->
