--- a/web/templates/layout/app.html.eex
+++ b/web/templates/layout/app.html.eex
@@ -65,6 +65,10 @@ $('select').material_select();
 
     <!--  <link href="/css/app.css" rel="stylesheet"> -->
     <style>
+
+      .p-3 {
+        padding: 3rem;
+      }
     .containerz {
       padding-right: 30px;
       padding-left: 30px;
@@ -101,36 +105,45 @@ $('select').material_select();
     border-radius: 50%;
     padding: 4px 5px;
 }
+.h-100 {
+  height: 100%;
+}
 
+.hot-pink {
+  background-color: #F50057;
+}
 small {
     font-size: 15px;
 }
-
+form {
+  background: white;
+  padding: 0.7rem;
+}
     </style>
   </head>
 
 
-    <div class="">
+    <div class="cyan">
       <header class="header">
-        <nav role="navigation" style="border-radius:5px;" class="teal accent-4 z-depth-4" style="color: black;">
+        <nav role="navigation" style="border-radius:5px;" class="white accent-4 z-depth-4" style="color: black;">
           <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
 
           <div class="nav-wrapper">
-          <ul>  <li>  <img class="brand-logo left" src="https://static1.squarespace.com/static/59462ef51b10e3c4c9653db5/t/595ed7dfc534a5e05a557713" style="max-height:50px; position:relative;"/> </li>
+          <ul>  <li> <a href="/"> <img class="brand-logo left" src="https://static1.squarespace.com/static/59462ef51b10e3c4c9653db5/t/595ed7dfc534a5e05a557713" style="max-height:50px; position:relative;"/> </a></li>
                 <li> <p  style="font-size: 20px;">Blogify</p> </li>
 
           </ul>
           <%= if @conn.cookies["bloguser"] do %>
-          <ul class="menu right right hide-on-med-and-down">
-              <li class"active cyan" ><a href="/posts">Home</a></li>
-              <li class"active cyan" ><a href="/users/profile/<%=@conn.cookies["bloguser"]%>">Profile</a></li>
-              <li class"active cyan" ><a href="/channels/view">Channels</a></li>
+          <ul class="menu right right hide-on-med-and-down hot-pink h-100" >
+              <li class="active " ><a href="/posts">Home</a></li>
+              <li class="active " ><a href="/users/profile/<%=@conn.cookies["bloguser"]%>">Profile</a></li>
+              <li class="active " ><a href="/channels/view">Channels</a></li>
 
-              <li class"active cyan" ><a href="/posts">Posts</a></li>
+              <!-- <li class"active cyan" ><a href="/posts">Posts</a></li> -->
 
-              <li class"active cyan" ><a href="/posts">More</a></li>
+              <!-- <li class"active cyan" ><a href="/posts">More</a></li> -->
 
-              <li class"active cyan" ><a href="/login">Logout</a></li>
+              <li class="active " ><a href="/login">Logout</a></li>
         <!--      <li>
                <a class='notif-button bz' href='#' data-activates='notifications-cont'><i class="material-icons " >notifications </i></a>
 
